code/python/FactSetFunds/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Funds client library for Python

[![API Version](https://img.shields.io/badge/api-v3.0.0-blue)](https://developer.factset.com/api-catalog/factset-funds-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.FactSetFunds/0.41.0)](https://pypi.org/project/fds.sdk.FactSetFunds/v/0.41.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

FactSet Mutual Funds and ETFs Reference provides fund-specific reference information as well as FactSet's proprietary classification system. It includes but is not limited to the following coverage 
  * Fund descriptions 
  * A seven-tier classification system
  * Leverage information
  * Fees and expenses 
  * Portfolio managers 
  
  FactSet Mutual Funds Time Series provides quantitative data items on a historical basis. It includes but is not limited to the following coverage 
  * Net asset value
  * Fund flows 
  * Assets under management
  * Total return 
  
 In addition to core reference and time series data, the API enables broader fund analytics and workflows, including: 
 * Fund summary and classification insights such as domicile, structure, segments, and similar funds  
 * Performance analytics including historical returns, snapshot returns across time horizons, and yield data 
 * Cost, fee, and risk metrics including expense ratios, regulatory/tax exposure, and risk measures 
 * Portfolio exposure and analytics including asset allocation, sector weightage, geographic exposure, and top holdings  
 * Trading and liquidity characteristics for evaluating tradability  
 * ETF-specific scoring and ratings to assess efficiency, tradability, and fit relative to benchmarks  
 * Distribution and income data for understanding payouts and investor returns 
 <p>This API is rate-limited to 10 requests per second and 10 concurrent requests per user.


This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.0.0
- SDK version: 0.41.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.FactSetFunds==0.41.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.FactSetFunds==0.41.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.10+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.10.0
      pyenv shell 3.10.0
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.FactSetFunds
from fds.sdk.FactSetFunds.api import portfolio_exposure_and_analysis_api
from fds.sdk.FactSetFunds.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.FactSetFunds.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.FactSetFunds.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.FactSetFunds.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = portfolio_exposure_and_analysis_api.PortfolioExposureAndAnalysisApi(api_client)
    ids = ["MABAX-US"] # [str] | The requested fund identifier. FactSet Identifiers, tickers, CUSIP, SEDOL, and ISIN are accepted inputs. <p>***IDs limit** =  10 per request*</p> *<p>Make note, GET Method URL request lines are also limited to a total length of 8192 bytes (8KB). In cases where the service allows for thousands of IDs, which may lead to exceeding this request line limit of 8KB, its advised for any requests with large request lines to be requested through the respective \"POST\" method.</p>*
    key_items_type = KeyItemsType("GROWTH") # KeyItemsType | The Key Items type report. (optional)

    try:
        # Get Financial Key Items for Funds
        # example passing only required values which don't have defaults set
        # and optional values
        api_response = api_instance.get_financial_key_items(ids, key_items_type=key_items_type)

        pprint(api_response)
    except fds.sdk.FactSetFunds.ApiException as e:
        print("Exception when calling PortfolioExposureAndAnalysisApi->get_financial_key_items: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Get Financial Key Items for Funds
    #     api_response, http_status_code, response_headers = api_instance.get_financial_key_items_with_http_info(ids, key_items_type=key_items_type)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.FactSetFunds.ApiException as e:
    #     print("Exception when calling PortfolioExposureAndAnalysisApi->get_financial_key_items: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Get Financial Key Items for Funds
    #     async_result = api_instance.get_financial_key_items_async(ids, key_items_type=key_items_type)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.FactSetFunds.ApiException as e:
    #     print("Exception when calling PortfolioExposureAndAnalysisApi->get_financial_key_items: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Get Financial Key Items for Funds
    #     async_result = api_instance.get_financial_key_items_with_http_info_async(ids, key_items_type=key_items_type)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.FactSetFunds.ApiException as e:
    #     print("Exception when calling PortfolioExposureAndAnalysisApi->get_financial_key_items: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.FactSetFunds

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.FactSetFunds.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.FactSetFunds

configuration = fds.sdk.FactSetFunds.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.FactSetFunds

configuration = fds.sdk.FactSetFunds.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.FactSetFunds

configuration = fds.sdk.FactSetFunds.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content/factset-funds/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*PortfolioExposureAndAnalysisApi* | [**get_financial_key_items**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioExposureAndAnalysisApi.md#get_financial_key_items) | **GET** /financials/key-items | Get Financial Key Items for Funds
*PortfolioExposureAndAnalysisApi* | [**get_financial_key_items_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioExposureAndAnalysisApi.md#get_financial_key_items_for_list) | **POST** /financials/key-items | Get Financial Key Items for Funds
*PortfolioExposureAndAnalysisApi* | [**get_portfolio_analytics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioExposureAndAnalysisApi.md#get_portfolio_analytics) | **GET** /portfolio/analytics | Get Asset Allocation, Sector Weightage, Geographic Revenue and Market Capitalization details
*PortfolioExposureAndAnalysisApi* | [**get_portfolio_analytics_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioExposureAndAnalysisApi.md#get_portfolio_analytics_for_list) | **POST** /portfolio/analytics | Get Asset Allocation, Sector Weightage, Geographic Revenue and Market Capitalization details
*PortfolioExposureAndAnalysisApi* | [**get_portfolio_statistics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioExposureAndAnalysisApi.md#get_portfolio_statistics) | **GET** /portfolio/statistics | Get Portfolio Statistics for Funds
*PortfolioExposureAndAnalysisApi* | [**get_portfolio_statistics_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioExposureAndAnalysisApi.md#get_portfolio_statistics_for_list) | **POST** /portfolio/statistics | Get Portfolio Statistics for Funds
*PortfolioExposureAndAnalysisApi* | [**get_risk_analytics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioExposureAndAnalysisApi.md#get_risk_analytics) | **GET** /risk-analytics | Get Credit Risk and Rate Risk Analytics
*PortfolioExposureAndAnalysisApi* | [**get_risk_analytics_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioExposureAndAnalysisApi.md#get_risk_analytics_for_list) | **POST** /risk-analytics | Get Credit Risk and Rate Risk Analytics.
*PortfolioExposureAndAnalysisApi* | [**get_top10_holdings**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioExposureAndAnalysisApi.md#get_top10_holdings) | **GET** /holdings/top-10 | Get Top 10 Holdings
*PortfolioExposureAndAnalysisApi* | [**get_top10_holdings_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioExposureAndAnalysisApi.md#get_top10_holdings_for_list) | **POST** /holdings/top-10 | Get Top 10 Holdings
*PricesReturnsAndDistributionsApi* | [**get_funds_distributions**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_distributions) | **GET** /distributions | Get Fund Distributions (Current or Historical)
*PricesReturnsAndDistributionsApi* | [**get_funds_distributions_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_distributions_for_list) | **POST** /distributions | Get Fund Distributions (Current or Historical) for a list
*PricesReturnsAndDistributionsApi* | [**get_funds_prices**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_prices) | **GET** /prices | Get Fund Prices (NAV) for a requested time-series
*PricesReturnsAndDistributionsApi* | [**get_funds_prices_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_prices_for_list) | **POST** /prices | Get Fund Prices (NAV) for a requested date range and large list of IDs.
*PricesReturnsAndDistributionsApi* | [**get_funds_returns**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_returns) | **GET** /returns | Get Fund Returns for a requested time-series
*PricesReturnsAndDistributionsApi* | [**get_funds_returns_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_returns_for_list) | **POST** /returns | Get Fund Returns for a requested time-series and large list of IDs.
*PricesReturnsAndDistributionsApi* | [**get_funds_returns_range**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_returns_range) | **GET** /returns/range | Get Fund Returns for a user-defined date range
*PricesReturnsAndDistributionsApi* | [**get_funds_returns_range_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_returns_range_for_list) | **POST** /returns/range | Get Fund Returns over pre-defined time horizons as of a specific date for large list of IDs.
*PricesReturnsAndDistributionsApi* | [**get_funds_returns_snapshot**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_returns_snapshot) | **GET** /returns/snapshot | Get Fund Returns over pre-defined time horizons as of a specific date.
*PricesReturnsAndDistributionsApi* | [**get_funds_returns_snapshot_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_returns_snapshot_for_list) | **POST** /returns/snapshot | Get Fund Returns over pre-defined time horizons as of a specific date.
*PricesReturnsAndDistributionsApi* | [**get_funds_yield**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_yield) | **GET** /yields | Get Fund Yield for a user-defined date range for large list of IDs.
*PricesReturnsAndDistributionsApi* | [**get_funds_yield_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesReturnsAndDistributionsApi.md#get_funds_yield_for_list) | **POST** /yields | Get Fund Yield for a user-defined date range for large list of IDs.
*ScoringApi* | [**get_scoring_details**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScoringApi.md#get_scoring_details) | **GET** /scoring | Get Scoring Details for ETFs
*ScoringApi* | [**get_scoring_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScoringApi.md#get_scoring_for_list) | **POST** /scoring | Get Scoring Details for ETFs
*ScreenerOperationsApi* | [**create_content_set**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScreenerOperationsApi.md#create_content_set) | **POST** /screener/content-sets/create | Create a new custom content set with required fields from the default content sets.
*ScreenerOperationsApi* | [**delete_content_set**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScreenerOperationsApi.md#delete_content_set) | **DELETE** /screener/content-sets/{name} | Delete a custom content set.
*ScreenerOperationsApi* | [**get_content_sets**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScreenerOperationsApi.md#get_content_sets) | **GET** /screener/content-sets | Get the content sets that are permissioned for the user.
*ScreenerOperationsApi* | [**get_distinct_count**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScreenerOperationsApi.md#get_distinct_count) | **POST** /screener/distinct-count | Returns the number of records for a given field spread across all possible values.
*ScreenerOperationsApi* | [**get_fields**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScreenerOperationsApi.md#get_fields) | **GET** /screener/fields | Get the list of fields available for given content set.
*ScreenerOperationsApi* | [**get_screener_data**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScreenerOperationsApi.md#get_screener_data) | **POST** /screener/search | Returns all the records that match the given criteria.
*ScreenerOperationsApi* | [**get_statistics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScreenerOperationsApi.md#get_statistics) | **POST** /screener/statistics | Returns the statistics and histogram data for a given field within the specified content sets.
*SummarySegmentsAndStatsApi* | [**get_funds_aum**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummarySegmentsAndStatsApi.md#get_funds_aum) | **GET** /aum | Get Fund AUM for a requested date range and list of IDs
*SummarySegmentsAndStatsApi* | [**get_funds_aum_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummarySegmentsAndStatsApi.md#get_funds_aum_for_list) | **POST** /aum | Get Fund AUM for a requested date range and large list of IDs
*SummarySegmentsAndStatsApi* | [**get_funds_flows**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummarySegmentsAndStatsApi.md#get_funds_flows) | **GET** /flows | Get Fund Flows for a requested date range and list of IDs
*SummarySegmentsAndStatsApi* | [**get_funds_flows_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummarySegmentsAndStatsApi.md#get_funds_flows_for_list) | **POST** /flows | Get Fund Flows for a requested date range and large list of IDs
*SummarySegmentsAndStatsApi* | [**get_funds_summary**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummarySegmentsAndStatsApi.md#get_funds_summary) | **GET** /summary | Get basic reference summary data for a Fund.
*SummarySegmentsAndStatsApi* | [**get_funds_summary_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummarySegmentsAndStatsApi.md#get_funds_summary_for_list) | **POST** /summary | Get basic reference data for a large list of Fund IDs.
*SummarySegmentsAndStatsApi* | [**get_segments_and_structure**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummarySegmentsAndStatsApi.md#get_segments_and_structure) | **GET** /segments-and-structure | Get Fund Classification, Similar Funds, Segments, and Fund Structure
*SummarySegmentsAndStatsApi* | [**get_segments_and_structure_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummarySegmentsAndStatsApi.md#get_segments_and_structure_for_list) | **POST** /segments-and-structure | Get Fund Classification, Similar Funds, Segments, and Fund Structure.
*TaxesFeesAndRisksApi* | [**get_funds_costs_fees**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxesFeesAndRisksApi.md#get_funds_costs_fees) | **GET** /costs-fees | Get the Fund&#39;s Costs, Investment minimums and Risk, and Fees.
*TaxesFeesAndRisksApi* | [**get_funds_costs_fees_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxesFeesAndRisksApi.md#get_funds_costs_fees_for_list) | **POST** /costs-fees | Get the Fund&#39;s Costs, Investment minimums and Risk, and Fees for large list of IDs.
*TaxesFeesAndRisksApi* | [**get_taxes_and_risks**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxesFeesAndRisksApi.md#get_taxes_and_risks) | **GET** /taxes-and-risks | Get Regulatory/Tax, Tax Exposure, and Risk Measures
*TaxesFeesAndRisksApi* | [**get_taxes_and_risks_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxesFeesAndRisksApi.md#get_taxes_and_risks_for_list) | **POST** /taxes-and-risks | Get Regulatory/Tax, Tax Exposure, and Risk Measures.
*TradingApi* | [**get_trading**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TradingApi.md#get_trading) | **GET** /trading | Get Trading Characteristics
*TradingApi* | [**get_trading_for_list**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TradingApi.md#get_trading_for_list) | **POST** /trading | Get Trading Characteristics


## Documentation For Models

 - [AnalyticsType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/AnalyticsType.md)
 - [AssetAllocation](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/AssetAllocation.md)
 - [AssetAllocationAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/AssetAllocationAllOf.md)
 - [AssetAllocationType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/AssetAllocationType.md)
 - [Aum](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Aum.md)
 - [AumAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/AumAllOf.md)
 - [AumRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/AumRequest.md)
 - [AumRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/AumRequestData.md)
 - [AumResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/AumResponse.md)
 - [BenchmarkDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/BenchmarkDetails.md)
 - [BenchmarkDetailsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/BenchmarkDetailsAllOf.md)
 - [BenchmarkDetailsType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/BenchmarkDetailsType.md)
 - [Classifications](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Classifications.md)
 - [ClassificationsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ClassificationsAllOf.md)
 - [ClassificationsType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ClassificationsType.md)
 - [ContentSet](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ContentSet.md)
 - [ContentSetItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ContentSetItem.md)
 - [ContentSetsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ContentSetsResponse.md)
 - [CostsFees](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CostsFees.md)
 - [CostsFeesAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CostsFeesAllOf.md)
 - [CostsFeesRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CostsFeesRequest.md)
 - [CostsFeesRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CostsFeesRequestData.md)
 - [CostsFeesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CostsFeesResponse.md)
 - [CreateContentSetRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CreateContentSetRequest.md)
 - [CreateContentSetRequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CreateContentSetRequestBody.md)
 - [CreateContentSetResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CreateContentSetResponse.md)
 - [CreateContentSetResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CreateContentSetResponseData.md)
 - [CreateRequestFieldObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CreateRequestFieldObject.md)
 - [CreditRisk](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CreditRisk.md)
 - [CreditRiskAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CreditRiskAllOf.md)
 - [CreditRiskType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CreditRiskType.md)
 - [Criterion](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Criterion.md)
 - [CurrencyResponseField](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CurrencyResponseField.md)
 - [CustomContentSetItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CustomContentSetItem.md)
 - [CustomContentSets](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/CustomContentSets.md)
 - [DateResponseField](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DateResponseField.md)
 - [DistCurrent](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistCurrent.md)
 - [DistCurrentAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistCurrentAllOf.md)
 - [DistCurrentType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistCurrentType.md)
 - [DistHistorical](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistHistorical.md)
 - [DistHistoricalAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistHistoricalAllOf.md)
 - [DistHistoricalType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistHistoricalType.md)
 - [DistinctCountData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistinctCountData.md)
 - [DistinctCountMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistinctCountMeta.md)
 - [DistinctCountRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistinctCountRequest.md)
 - [DistinctCountRequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistinctCountRequestBody.md)
 - [DistinctCountResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistinctCountResponse.md)
 - [DistributionType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistributionType.md)
 - [DistributionsItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistributionsItem.md)
 - [DistributionsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistributionsRequest.md)
 - [DistributionsRequestItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistributionsRequestItem.md)
 - [DistributionsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DistributionsResponse.md)
 - [DividendAdjust](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/DividendAdjust.md)
 - [ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ErrorResponse.md)
 - [Field](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Field.md)
 - [FieldResponseObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FieldResponseObject.md)
 - [FieldValues](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FieldValues.md)
 - [FieldsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FieldsResponse.md)
 - [Filter](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Filter.md)
 - [FinancialsKeyItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FinancialsKeyItems.md)
 - [FinancialsKeyItemsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FinancialsKeyItemsRequest.md)
 - [FinancialsKeyItemsRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FinancialsKeyItemsRequestData.md)
 - [FinancialsKeyItemsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FinancialsKeyItemsResponse.md)
 - [Flows](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Flows.md)
 - [FlowsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FlowsAllOf.md)
 - [FlowsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FlowsRequest.md)
 - [FlowsRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FlowsRequestData.md)
 - [FlowsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FlowsResponse.md)
 - [Frequency](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Frequency.md)
 - [FrequencyAum](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FrequencyAum.md)
 - [Fund](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Fund.md)
 - [FundStructure](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundStructure.md)
 - [FundStructureAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundStructureAllOf.md)
 - [FundStructureType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundStructureType.md)
 - [FundVsSegmentBenchmark](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundVsSegmentBenchmark.md)
 - [FundsErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsErrorObject.md)
 - [FundsErrorObjectSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsErrorObjectSource.md)
 - [FundsPricesRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsPricesRequest.md)
 - [FundsPricesRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsPricesRequestData.md)
 - [FundsPricesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsPricesResponse.md)
 - [FundsReturnsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsReturnsRequest.md)
 - [FundsReturnsRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsReturnsRequestData.md)
 - [FundsReturnsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsReturnsResponse.md)
 - [FundsReturnsSnapshotRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsReturnsSnapshotRequest.md)
 - [FundsReturnsSnapshotRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsReturnsSnapshotRequestData.md)
 - [FundsReturnsSnapshotResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/FundsReturnsSnapshotResponse.md)
 - [GeographicRevenue](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/GeographicRevenue.md)
 - [GeographicRevenueAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/GeographicRevenueAllOf.md)
 - [GeographicRevenueType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/GeographicRevenueType.md)
 - [Growth](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Growth.md)
 - [GrowthAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/GrowthAllOf.md)
 - [GrowthType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/GrowthType.md)
 - [HistogramData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/HistogramData.md)
 - [Holdings](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Holdings.md)
 - [IdentifierResponseFields](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/IdentifierResponseFields.md)
 - [Ids](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Ids.md)
 - [JoinType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/JoinType.md)
 - [KeyItemsType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/KeyItemsType.md)
 - [Lang](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Lang.md)
 - [Managers](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Managers.md)
 - [Margins](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Margins.md)
 - [MarginsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/MarginsAllOf.md)
 - [MarginsType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/MarginsType.md)
 - [MarketCapitalization](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/MarketCapitalization.md)
 - [MarketCapitalizationAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/MarketCapitalizationAllOf.md)
 - [MarketCapitalizationType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/MarketCapitalizationType.md)
 - [Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Meta.md)
 - [MetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/MetaPagination.md)
 - [MetaRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/MetaRequest.md)
 - [NavDataType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/NavDataType.md)
 - [NestedFieldValueObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/NestedFieldValueObject.md)
 - [NestedFieldValues](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/NestedFieldValues.md)
 - [OAS](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/OAS.md)
 - [Operator](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Operator.md)
 - [Pagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Pagination.md)
 - [PaginationRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PaginationRequest.md)
 - [PerShare](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PerShare.md)
 - [PerShareAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PerShareAllOf.md)
 - [PerShareType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PerShareType.md)
 - [PortfolioAnalyticsItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioAnalyticsItem.md)
 - [PortfolioAnalyticsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioAnalyticsRequest.md)
 - [PortfolioAnalyticsRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioAnalyticsRequestData.md)
 - [PortfolioAnalyticsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioAnalyticsResponse.md)
 - [PortfolioStatistics](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioStatistics.md)
 - [PortfolioStatisticsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioStatisticsAllOf.md)
 - [PortfolioStatisticsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioStatisticsRequest.md)
 - [PortfolioStatisticsRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioStatisticsRequestData.md)
 - [PortfolioStatisticsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PortfolioStatisticsResponse.md)
 - [Prices](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Prices.md)
 - [PricesAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/PricesAllOf.md)
 - [RateRisk](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RateRisk.md)
 - [RateRiskAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RateRiskAllOf.md)
 - [RateRiskType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RateRiskType.md)
 - [Ratios](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Ratios.md)
 - [RatiosAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RatiosAllOf.md)
 - [RatiosType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RatiosType.md)
 - [RegulationsTaxDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RegulationsTaxDetails.md)
 - [RegulationsTaxDetailsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RegulationsTaxDetailsAllOf.md)
 - [RegulationsTaxDetailsType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RegulationsTaxDetailsType.md)
 - [Returns](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Returns.md)
 - [ReturnsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ReturnsAllOf.md)
 - [ReturnsRange](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ReturnsRange.md)
 - [ReturnsRangeAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ReturnsRangeAllOf.md)
 - [ReturnsRangeRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ReturnsRangeRequest.md)
 - [ReturnsRangeRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ReturnsRangeRequestData.md)
 - [ReturnsRangeResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ReturnsRangeResponse.md)
 - [ReturnsSnapshot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ReturnsSnapshot.md)
 - [ReturnsSnapshotAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ReturnsSnapshotAllOf.md)
 - [RiskAnalyticsItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RiskAnalyticsItem.md)
 - [RiskAnalyticsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RiskAnalyticsRequest.md)
 - [RiskAnalyticsRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RiskAnalyticsRequestData.md)
 - [RiskAnalyticsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RiskAnalyticsResponse.md)
 - [RiskMeasures](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RiskMeasures.md)
 - [RiskMeasuresAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RiskMeasuresAllOf.md)
 - [RiskMeasuresType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RiskMeasuresType.md)
 - [RiskType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/RiskType.md)
 - [Scoring](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Scoring.md)
 - [ScoringAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScoringAllOf.md)
 - [ScoringRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScoringRequest.md)
 - [ScoringRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScoringRequestData.md)
 - [ScoringResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/ScoringResponse.md)
 - [SearchContentSets](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SearchContentSets.md)
 - [SearchCriterion](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SearchCriterion.md)
 - [SearchData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SearchData.md)
 - [SearchFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SearchFilter.md)
 - [SearchMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SearchMeta.md)
 - [SearchRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SearchRequest.md)
 - [SearchRequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SearchRequestBody.md)
 - [SearchResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SearchResponse.md)
 - [SectorWeightage](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SectorWeightage.md)
 - [SectorWeightageAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SectorWeightageAllOf.md)
 - [SectorWeightageType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SectorWeightageType.md)
 - [SegmentsAndStructureItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SegmentsAndStructureItem.md)
 - [SegmentsAndStructureRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SegmentsAndStructureRequest.md)
 - [SegmentsAndStructureRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SegmentsAndStructureRequestData.md)
 - [SegmentsAndStructureResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SegmentsAndStructureResponse.md)
 - [SimilarFunds](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SimilarFunds.md)
 - [SimilarFundsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SimilarFundsAllOf.md)
 - [SimilarFundsType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SimilarFundsType.md)
 - [SplitAdjust](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SplitAdjust.md)
 - [StatisticsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/StatisticsRequest.md)
 - [StatisticsRequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/StatisticsRequestBody.md)
 - [StatisticsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/StatisticsResponse.md)
 - [StatisticsResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/StatisticsResponseData.md)
 - [StructureType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/StructureType.md)
 - [Summaries](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Summaries.md)
 - [SummariesAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummariesAllOf.md)
 - [SummariesRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummariesRequest.md)
 - [SummariesRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummariesRequestData.md)
 - [SummariesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/SummariesResponse.md)
 - [TaxExposure](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxExposure.md)
 - [TaxExposureAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxExposureAllOf.md)
 - [TaxExposureType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxExposureType.md)
 - [TaxItemsType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxItemsType.md)
 - [TaxesAndRisksItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxesAndRisksItem.md)
 - [TaxesAndRisksRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxesAndRisksRequest.md)
 - [TaxesAndRisksRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxesAndRisksRequestData.md)
 - [TaxesAndRisksResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TaxesAndRisksResponse.md)
 - [TopHoldings](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TopHoldings.md)
 - [TopHoldingsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TopHoldingsAllOf.md)
 - [TopHoldingsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TopHoldingsRequest.md)
 - [TopHoldingsRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TopHoldingsRequestData.md)
 - [TopHoldingsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TopHoldingsResponse.md)
 - [Trading](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Trading.md)
 - [TradingAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TradingAllOf.md)
 - [TradingRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TradingRequest.md)
 - [TradingResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/TradingResponse.md)
 - [WAL](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/WAL.md)
 - [Yields](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/Yields.md)
 - [YieldsAllOf](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/YieldsAllOf.md)
 - [YieldsRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/YieldsRequest.md)
 - [YieldsRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/YieldsRequestData.md)
 - [YieldsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetFunds/v3/docs/YieldsResponse.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.FactSetFunds.apis and fds.sdk.FactSetFunds.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.FactSetFunds.api.default_api import DefaultApi`
- `from fds.sdk.FactSetFunds.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.FactSetFunds
from fds.sdk.FactSetFunds.apis import *
from fds.sdk.FactSetFunds.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

